--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -49,7 +49,7 @@
 			<span class="linkTitle">Preview</span>
 		</button> -->
 
-	 <div class="sub-title marginTop15">Index Configurations</div>
+	 <div class="sub-title marginTop15">Index Configuration</div>
 			<div mat-button class="mat-button" [routerLink]="['/traits']" skipLocationChange routerLinkActive="active" (click)="preview('traits')" mat-button>
 				<span class="inlineIconBox leftAdjust">
 					<img src="assets/icons/sidemenu/new-icons/traits.svg" class="defaultIcon">	
@@ -64,7 +64,7 @@
 				</span>
 				<span class="linkTitle">Workbench</span>
 			</div>
-		<div class="sub-title marginTop15">Search Configurations</div>
+		<div class="sub-title marginTop15">Search Configuration</div>
 			<div mat-button class="mat-button" [routerLink]="['/weights']" skipLocationChange routerLinkActive="active" (click)="preview('weights')" mat-button>
 				<span class="inlineIconBox leftAdjust">
 					<img src="assets/icons/sidemenu/new-icons/weights.svg" class="defaultIcon">	
