--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -135,7 +135,7 @@
         </header>
         <perfect-scrollbar class="table-scroll-perfect">
           <ng-container *ngIf="sectionShow">
-            <div class="content-body" *ngFor="let source of resources" (click)="openStatusSlider(source)">
+            <div class="content-body" *ngFor="let source of resources" (click)="openStatusSlider(source)"  [ngClass]="{'cursor-pointer':statusObj[source.recentStatus].name == 'Success' }">
               <div class="col_ col-4">{{source.title || source.name}}</div>
               <div class="col_ col-2">
                 {{(source.type == 'webdomain' ? 'Web' :(source.type == 'document'? 'Doc': '')) | uppercase }}</div>
@@ -207,12 +207,12 @@
   </div>
 </div>
 
-<kr-modal modalType="center" modalClass="sliderComponent" #statusModalPop id="sourceSlider">
-  <div class="modal-header">
+<kr-modal modalType="center" modalClass="sliderComponent modal_popups_" #statusModalPop id="sourceSlider">
+  <div class="modal-header noShadow">
     <h4 class="header-title">{{selectedSource.name}}</h4>
     <img src="assets/images/close.svg" class="closeCross" (click)="sliderStep?sliderBack():closeStatusModal();">
   </div>
-  <div class="modal-body source-modal-popup">
+  <div class="modal-body source-modal-popup ">
 
     <div class="sliderBody call-history-filter">
       <div class="mainLoadingSpinner" *ngIf="loadingSliderContent" [@fadeInOutAnimation]>
