--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -400,7 +400,7 @@ body::-webkit-scrollbar {
             background: transparent;
             border-radius: 4px;
             padding: 0;
-            height: auto;
+            height: 16px;
             border: 0;
             line-height: 0;
             img{
@@ -1230,6 +1230,9 @@ div.divBlockEmptylastChild:first-child {
         box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
         background: #fff !important;
         display: block !important;
+        &.noShadow{
+            box-shadow: none;
+        }
         .title{
             color: #202124;
             font-weight: normal;
@@ -1371,5 +1374,5 @@ div.divBlockEmptylastChild:first-child {
     }
 }
 .cursor-pointer{
-    cursor: pointer;
+    cursor: pointer !important;
 }
