--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -212,12 +212,13 @@
                     border-radius: 4px;
                     margin: 12px 30px;
                     transition: 0.3s all ease;
+                    cursor: pointer;
                     .title{
                         color: #5F6368;
                         font-size: 12px;
                         line-height: 20px;
                         font-weight: normal;
-                        cursor: default;
+                        // cursor: default;
                     }
                     &:hover{
                         border: 1px solid #0D6EFD;
